frontend/src/app/components/templates/header-footer-template/header-footer-template.component.css
#page-container {
	min-height: 100vh;
	display: flex;
	flex-flow: column nowrap;
}

#page-content {
	display: flex;
	flex-flow: column nowrap;
	flex-grow: 1;
	align-items: center;
	padding: var(--spacing-large);
}


/* Header */

#app-title {
	font-size: var(--text-big);
	font-weight: bold;
	color: var(--col-primary);
	margin-left: 0px;
	margin-right: 4vw;
}

header {
	background-color: var(--col-canvas);
	padding: 10px;
	border-bottom: 2px solid var(--col-border);
	user-select: none;
}

header a, header span {
	color: var(--col-text);
}


/* Sub-menu */

.menuitem {
	margin-left: var(--spacing-large);
	position: relative;
}

span.menuitem {
	cursor: pointer;
}

.menuitem > .submenu {
	position: absolute;
	top: 18px;
	left: 0px;
	display: none;
}

.menuitem:hover > .submenu {
	display: block;
}

.submenu-arrow {
	height: 12px;
	width:  12px;
	border-top:  var(--col-border) solid 1px;
	border-left: var(--col-border) solid 1px;
	background-color: var(--col-canvas);
	position: relative;
	transform: rotate(45deg);
	top:  6px;
	left: 15px;
}

.submenu > .canvas > a {
	white-space: nowrap;
	display: block;
	margin-top: var(--spacing-medium);
}

.submenu > .canvas > a:nth-child(1) {
	margin-top: 0px;
}


/* Footer */

footer {
	width: 100%;
	text-align: center;
	font-size: var(--text-small);
	background-color: var(--col-canvas);
	border-top: 1px solid var(--col-border);
}

